--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main" aria-controls="main" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa-solid fa-bars"></i>
                 </button>
-                <div class="collapse navbar-collapse" id="main">
+                <div class="collapse navbar-collapse my-menu" id="main">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link p-2 p-lg-3 active" aria-current="page" href="#">Home</a>
@@ -359,12 +359,12 @@
                         <div class="links">
                             <h5 class="text-light">Links</h5>
                             <ul class="list-unstyled lh-lg">
-                                <li>Home</li>
-                                <li>Our Servies</li>
-                                <li>Portfolio</li>
-                                <li>Testimonials</li>
-                                <li>Support</li>
-                                <li>Terms & Conditions</li>
+                                <li><a href="#" class="text-white-50">Home</a></li>
+                                <li><a href="#" class="text-white-50">Our Servies</a></li>
+                                <li><a href="#" class="text-white-50">Portfolio</a></li>
+                                <li><a href="#" class="text-white-50">Testimonials</a></li>
+                                <li><a href="#" class="text-white-50">Support</a></li>
+                                <li><a href="#" class="text-white-50">Terms & Conditions</a></li>
                             </ul>
                         </div>
                     </div>
@@ -372,11 +372,11 @@
                         <div class="links">
                             <h5 class="text-light">About Us</h5>
                             <ul class="list-unstyled lh-lg">
-                                <li>Sign In</li>
-                                <li>Register</li>
-                                <li>About Us</li>
-                                <li>Blog</li>
-                                <li>Contact Us</li>
+                                <li><a href="#" class="text-white-50">Sign In</a></li>
+                                <li><a href="#" class="text-white-50">Register</a></li>
+                                <li><a href="#" class="text-white-50">About Us</a></li>
+                                <li><a href="#" class="text-white-50">Blog</a></li>
+                                <li><a href="#" class="text-white-50">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
@@ -410,3 +410,5 @@
         <script src="js/all.min.js"></script>
     </body>
 </html>
+
+
